syntax = "proto3";

message BoxProtoMessage {

    message EncryPropositionProtoMessage {
        bytes contractHash = 1;
    }

    message AssetBoxProtoMessage {
        EncryPropositionProtoMessage encryPropositionProtoMessage = 1;
        uint64 nonce = 2;
        uint64 amount = 3;
        bytes tokenId = 4;
    }

    message DataBoxProtoMessage {
        EncryPropositionProtoMessage encryPropositionProtoMessage = 1;
        uint64 nonce = 2;
        bytes data = 3;
    }

    message TokenIssuingBoxProtoMessage {
        EncryPropositionProtoMessage encryPropositionProtoMessage = 1;
        uint64 nonce = 2;
        uint64 amount = 3;
        bytes tokenId = 4;
    }

    oneof box {
        AssetBoxProtoMessage assetBox = 1;
        DataBoxProtoMessage dataBox = 2;
        TokenIssuingBoxProtoMessage tokenIssuingBox = 3;
    }
}