syntax = "proto3";
import "scalapb/scalapb.proto";

option optimize_for = SPEED;

message TransactionProtoMessage {

    message DirectiveProtoMessage {

        message ADKeyProto {
            bytes tokenIdOpt = 1;
        }

        message TransferDirectiveProtoMessage {
            string address = 1;
            uint64 amount = 2;
            ADKeyProto tokenIdOpt = 3;
        }

        message AssetIssuingDirectiveProtoMessage {
            bytes contractHash = 1;
            uint64 amount = 2;
        }

        message ScriptedAssetDirectiveProtoMessage {

            bytes contractHash = 1;
            uint64 amount = 2;
            ADKeyProto tokenIdOpt = 3;
        }

        message DataDirectiveProtoMessage {
            bytes contractHash = 1;
            bytes data = 2;
        }

        oneof directivesLocal {
            TransferDirectiveProtoMessage transferDirective = 1;
            AssetIssuingDirectiveProtoMessage assetIssuingDirective = 2;
            ScriptedAssetDirectiveProtoMessage scriptedAssetDirective = 3;
            DataDirectiveProtoMessage dataDirective = 4;
        }
    }

    uint64 fee = 1;
    uint64 timestamp = 2;
    repeated bytes inputs = 3 [(scalapb.field).collection_type = "scala.collection.immutable.IndexedSeq"];
    repeated DirectiveProtoMessage directives = 4 [(scalapb.field).collection_type = "scala.collection.immutable.IndexedSeq"];
    bytes proof = 5;
}